--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DH'
 - !lcsh 'Indexes'
+- GITenberg
 title: 'The Project Gutenberg Works Of John Lothrop Motley
 
   A Linked Index for: The Rise of the Dutch Republic; The
